objects/CPP_Lead_Registration__c.object
<CustomObject>
    <fields>
        <fullName>CP_Needs__c</fullName>
        <label>CP Needs</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Child_Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Child Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>CPP_Leads_Registration1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Claimed_in_GN__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Claimed in GN?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Current_PMS__c</fullName>
        <label>Current PMS</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Demo_Scheduled_Given__c</fullName>
        <label>Date Demo Scheduled/Given</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_Submitted__c</fullName>
        <label>Date Submitted</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expected_Close_Date__c</fullName>
        <label>Expected Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GN_Link__c</fullName>
        <formula>IF(NOT(ISBLANK( Gold_Nugget_Client_ID__c )), HYPERLINK('http://live.yodle.com/app/clientconfig/home/clientsummary?clientId='+ Gold_Nugget_Client_ID__c ,'View Client Record in Yodle Live', '_blank'), IF(NOT(ISBLANK( Gold_Nugget_Prospect_ID__c )), 'http://live.yodle.com/app/sales/prospects/prospect/view?prospectId=' + Gold_Nugget_Prospect_ID__c, ''))</formula>
        <label>GN Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gold_Nugget_Client_ID__c</fullName>
        <label>Gold Nugget Client ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gold_Nugget_Prospect_ID__c</fullName>
        <label>Gold Nugget Prospect ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>In_a_Contract__c</fullName>
        <defaultValue>false</defaultValue>
        <label>In a Contract?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lead_Contact_Name__c</fullName>
        <label>Lead Contact Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Phone_Number__c</fullName>
        <label>Lead Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Lead_Registration_Status__c</fullName>
        <label>Lead Registration Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Newly Registered</fullName>
                    <default>true</default>
                    <label>Newly Registered</label>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Denied</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Opportunity_Stage__c</fullName>
        <inlineHelpText>You can't set the Opportunity Stage until this Lead has been approved!</inlineHelpText>
        <label>Opportunity Stage</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Lead_Registration_Status__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New Opportunity</fullName>
                </value>
                <value>
                    <fullName>Closed Won</fullName>
                </value>
                <value>
                    <fullName>Closed Lost</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>CPP_Leads_Registration</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Partner_Account__c</fullName>
        <label>Partner Account</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Partner Master Account</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipName>CPP_Leads_Registration</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Primary_Concern__c</fullName>
        <label>Primary Concern</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Split_Rep__c</fullName>
        <label>Split Rep</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Split_with_Sales_Rep__c</fullName>
        <label>Split with Sales Rep</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Submitted_By__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Submitted By</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Lead Registration</relationshipLabel>
        <relationshipName>Lead_Registration</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <label>Lead Registration</label>
    <nameField>
        <label>Lead Company Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Lead Registration</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Lead_Registration_Status__c</columns>
        <columns>LAST_ACTIVITY</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>New_Leads_SInce_Last_7_Days_for_CPP</fullName>
        <columns>NAME</columns>
        <columns>Lead_Registration_Status__c</columns>
        <columns>LAST_ACTIVITY</columns>
        <columns>Partner_Account__c</columns>
        <columns>Claimed_in_GN__c</columns>
        <columns>CP_Needs__c</columns>
        <columns>Current_PMS__c</columns>
        <columns>Date_Demo_Scheduled_Given__c</columns>
        <columns>Date_Submitted__c</columns>
        <columns>GN_Link__c</columns>
        <columns>Gold_Nugget_Client_ID__c</columns>
        <columns>Gold_Nugget_Prospect_ID__c</columns>
        <columns>In_a_Contract__c</columns>
        <columns>Lead_Contact_Name__c</columns>
        <columns>Opportunity__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_N_DAYS:180</value>
        </filters>
        <label>New Leads SInce Last 7 Days for CPP</label>
    </listViews>
    <validationRules>
        <fullName>Date_Submitted_Validation</fullName>
        <active>false</active>
        <errorConditionFormula>ISCHANGED( Date_Submitted__c ) &amp;&amp; NOT(ISNEW())</errorConditionFormula>
        <errorDisplayField>Date_Submitted__c</errorDisplayField>
        <errorMessage>You can't change the submission date!</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Expected_Close_Date_Required_to_Approve</fullName>
        <active>false</active>
        <errorConditionFormula>ISPICKVAL( Lead_Registration_Status__c ,'Approved') &amp;&amp;  ISNULL( Expected_Close_Date__c )</errorConditionFormula>
        <errorDisplayField>Expected_Close_Date__c</errorDisplayField>
        <errorMessage>Please enter an Expected Close Date to Approve this Lead!</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Split_with_Sales_Rep</fullName>
        <active>false</active>
        <errorConditionFormula>ISPICKVAL( Split_with_Sales_Rep__c ,'Yes') &amp;&amp; ISBLANK( Split_Rep__c )</errorConditionFormula>
        <errorDisplayField>Split_with_Sales_Rep__c</errorDisplayField>
        <errorMessage>Please enter the Sales Rep's name</errorMessage>
    </validationRules>
</CustomObject>